--- a/proj/Wilson-proposal.ipynb
+++ b/proj/Wilson-proposal.ipynb
@@ -113,10 +113,10 @@
    "source": [
     "## Timeline\n",
     "\n",
-    "wk1 : build GOL and design Agent\n",
-    "wk2 : implement and experiment with agent's interactions with GOL\n",
-    "wk3 : collect interesting data to add to report\n",
-    "wk4 : compile and complete writeup of findings and interpretations"
+    "* wk1 : build GOL and design Agent\n",
+    "* wk2 : implement and experiment with agent's interactions with GOL\n",
+    "* wk3 : collect interesting data to add to report\n",
+    "* wk4 : compile and complete writeup of findings and interpretations"
    ]
   }
  ],
