--- a/proj/Final.ipynb
+++ b/proj/Final.ipynb
@@ -446,7 +446,42 @@
     "Variable: Problem/grid size\n",
     "\n",
     "##### Results\n",
-    "    TODO\n",
+    "\n",
+    "    -~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-\n",
+    "    Title: new random flip of size 4x4 and density 0.3\n",
+    "    base\n",
+    "    total steps: 35\n",
+    "    total rewards: 176\n",
+    "    total maxouts: 0\n",
+    "\n",
+    "    test\n",
+    "    total steps: 1015\n",
+    "    total rewards: 6902\n",
+    "    total maxouts: 2\n",
+    "\n",
+    "    -~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-\n",
+    "    Title: new random flip of size 10x10 and density 0.3\n",
+    "    base\n",
+    "    total steps: 450\n",
+    "    total rewards: 8937\n",
+    "    total maxouts: 0\n",
+    "\n",
+    "    test\n",
+    "    total steps: 1688\n",
+    "    total rewards: 15531\n",
+    "    total maxouts: 3\n",
+    "\n",
+    "    -~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-\n",
+    "    Title: new random flip of size 20x20 and density 0.3\n",
+    "    base\n",
+    "    total steps: 2116\n",
+    "    total rewards: 87956\n",
+    "    total maxouts: 3\n",
+    "\n",
+    "    test\n",
+    "    total steps: 2500\n",
+    "    total rewards: 62130\n",
+    "    total maxouts: 5\n",
     "\n",
     "For smaller cell grids, RL is extremely effective in maximizing the population of cells. That is because it is capable of memorizing the state space as opposed to learning it. For large state spaces, random action (control) outperformed the RL agent in population, but the RL agent was able to keep cells alive for longer (generations vs boom and bust populations).\n",
     "\n",
@@ -454,6 +489,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -474,17 +510,24 @@
     "* Applying MVC to create GUI application where Model is independent from Controller/View\n",
     "* How to create installable python modules (my `cgolai` package can be installed like other packages, with `setup.py`).\n",
     "* Unit testing with python's `unittest` to test my module\n",
+    "* Git for version control and distributed work (easy switching between GPU machine vs local)\n",
+    "* Compressed pickling for storing model states\n",
     "* PEP 8 code style standards\n",
     "\n",
     "### Experimentation\n",
+    "\n",
+    "Problems with my experimentation methodologies:\n",
     "* I didn't do much hyper-parameter tuning, so it's possible there are better parameters which train the model much better than my experiments found.\n",
     "* Training larger networks took very long, so I usually didn't let the network train for very long. This means the RL agent wasn't performing as well as it could have, but I think letting it train longer has the same performance as the RL in a smaller state, i.e., it will memorize the larger state as well. However, since it can't really memorize the larger state, it would be interesting to know if it could draw accurate extrapolations from such an intense training.\n",
+    "* I'm pretty sure that my conversions from numpy.ndarray/list/torch.Tensor result in my neural network training very inefficiently (either not using GPU or making unnecessary copies). It was functional, so I didn't look further into it.\n",
+    "* I put tables in my report instead of graphing them, which I apologize for.\n",
     "\n",
     "### Resources\n",
     "\n",
-    "See cs440_notes.docx for the Reading component for the Honors Requirement.\n",
-    "\n",
-    "TODO"
+    "See cs440_notes.docx for the reading component for the Honors Requirement.\n",
+    "* Sutton, Richard S., and Andrew G. Barto. Reinforcement Learning: An Introduction. Chapter 6: Temporal-Difference Learning. Second edition, complete draft. 5 Nov 2017.\n",
+    "* Caballero, Lorena, Bob Hodge, and Sergio Hernandez. Conway’s “Game of Life” and the Epigenetic Principle.\n",
+    "* Gadaleta, Sabino, and Gerhard Dangelmayr. Reinforcement Learning Chaos Control Using Value Sensitive Vector-Quantization."
    ]
   },
   {
@@ -496,7 +539,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Word count for file Final.ipynb is 4091\n"
+      "Word count for file Final.ipynb is 4448\n"
      ]
     }
    ],
@@ -514,6 +557,13 @@
     "    if cell.cell_type == \"markdown\":\n",
     "        word_count += len(cell['source'].replace('#', '').lstrip().split(' '))\n",
     "print('Word count for file', nbfile[0], 'is', word_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Note: While the word count is slightly over, I have text tables of results, so of words actually related to my work and explanation, I am within the expected range.*"
    ]
   },
   {
