--- a/proj/Final.ipynb
+++ b/proj/Final.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "# Methods\n",
     "\n",
-    "I created a python package called `cgolai` to assist with this experimentation. The full source code for this is on [my github](https://github.com/larkwt96/c440).\n",
+    "I created a python package called `cgolai` to assist with this experimentation. The full source code for this is on [my github](https://github.com/larkwt96/c440), but all files needed are included in the submitted tar file.\n",
     "\n",
     "###  A headless model of CGOL (used by the GUI) which can quickly simulate CGOL independent of the GUI\n",
     "\n",
@@ -50,9 +50,35 @@
     "The software has lots of functionalities that let you save, load and draw your own CGOL initial conditions. You can let them play or you can move step by step (with rewinding also as a possibility). It's also easy to run:\n",
     "`python3 -m cgolai.cgol -f saved_simulation.dat`\n",
     "\n",
-    "(I'm most proud of the game loop structure. Most guides have a loop which checks for events, but this uses CPU time to constantly check. I designed it to be completely event driven so that it will wait until an event occurs and act on it. However, when events occur very quickly, the thread swapping degraded performance. To solve this, I had it process all events when a single event was identified. Then, if lots of events were generated at once (a mouse drag or high simulation rate for example), it would process all of them while only blocking on one. While my simulation is paused, the CPU is completely idol.)\n",
+    "(I'm most proud of the game loop structure. Most guides have a loop which checks for events, but this uses CPU time to constantly check. I designed it to be completely event driven so that it will wait until an event occurs and act on it. However, when events occur very quickly, the thread swapping degraded performance. To solve this, I had it process all events when a single event was identified. Then, if lots of events were generated at once (a mouse drag or high simulation rate for example), it would process all of them while only blocking on one. While my simulation is paused, the CPU is completely idol.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the initial state. You can see dots in the middle. This symbolize flipped cells.\n",
     "\n",
-    "###  Personal implementation of Neural Network\n",
+    "<img src=\"img/demo1.png\" style=\"display: inline-block;\" width=\"400px\" height=\"600px\"/>\n",
+    "\n",
+    "Here is the state a few iterations later\n",
+    "\n",
+    "<img src=\"img/demo2.png\" style=\"display: inline-block;\" width=\"200px\" height=\"300px\"/>\n",
+    "<img src=\"img/demo3.png\" style=\"display: inline-block;\" width=\"200px\" height=\"300px\"/>\n",
+    "<img src=\"img/demo4.png\" style=\"display: inline-block;\" width=\"200px\" height=\"300px\"/>\n",
+    "\n",
+    "And about 100 iterations later:\n",
+    "\n",
+    "<img src=\"img/demo5.png\" style=\"display: inline-block;\" width=\"200px\" height=\"300px\"/>\n",
+    "\n",
+    "This is a state filled with still life and oscillators. The cells will stay alive forever. My RL agent would converge to these and then avoid changing cells near any of the structures."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  (Failed) Personal implementation of Neural Network\n",
     "\n",
     "Originally, I planned to implement a Neural Network manually, but it didn't work. I did the math to derive the gradient of the weights for stochastic gradient descent, and the math is correct, but implementation doesn't work as well. \n",
     "\n",
@@ -123,21 +149,57 @@
     "\n",
     "More details for experiments are in the [Experimentation](#Experimentation) section.\n",
     "\n",
-    "Experiment 1\n",
-    "**Conclusion: The optimal solution is to find a means of generating still life and then make no actions on the system.**\n",
+    "#### Experiment 1\n",
+    "* The optimal solution is to find a means of generating still life and then make no actions on the system.\n",
     "\n",
-    "Experiment 2\n",
-    "**Conclusion: However, it performed very similarly since it often found a way to choose cells which don't affect the generated still life structures.**\n",
+    "#### Experiment 2\n",
+    "* However, it performed very similarly since it often found a way to choose cells which don't affect the generated still life structures.\n",
     "\n",
-    "Experiment 3\n",
-    "**Conclusion: Removing the ability to idle actually increases the performance of the RL agent (possibly due to better forced exploration).**\n",
+    "#### Experiment 3\n",
+    "* Removing the ability to idle actually increases the performance of the RL agent (possibly due to better forced exploration).\n",
+    "* Randomness hurts the performance as expected, but the RL agent is still capable of guiding the cells into still life structures when it recognizes the state.\n",
     "\n",
-    "**Conclusion: Randomness hurts the performance as expected, but the RL agent is still capable of guiding the cells into still life structures when it recognizes the state.**\n",
+    "#### Experiment 4\n",
+    "* I suspect that this factor doesn't have much of an affect on RL since the state deviates from the initial state so quickly.\n",
     "\n",
-    "Experiment 4\n",
-    "**Conclusion: I suspect that this factor doesn't have much of an affect on RL since the state deviates from the initial state so quickly.**\n",
+    "#### Experiment 5\n",
+    "* RL is memorizing the small state space and doesn't perform well in large state spaces."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pictures\n",
     "\n",
-    "Experiment 5"
+    "Here are sequences from a 10x10 trial.\n",
+    "\n",
+    "Here is the beginning of the trial:\n",
+    "\n",
+    "<img src=\"img/test_start6.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"img/test_start7.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"img/test_start8.png\" style=\"display: inline;\"/>\n",
+    "\n",
+    "These domonstrate how the agent chooses open space. It behaved like this for about 7 iterations.\n",
+    "\n",
+    "<img src=\"img/open_space1.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"img/open_space2.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"img/open_space3.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"img/open_space4.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"img/open_space5.png\" style=\"display: inline;\"/>\n",
+    "\n",
+    "Here is a solution it converges to after the system becomes an oscillator or still life. In this case, it was an oscillator.\n",
+    "\n",
+    "<img src=\"img/osc_soln1.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"img/osc_soln2.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"img/osc_soln3.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"img/osc_soln4.png\" style=\"display: inline;\"/>\n",
+    "\n",
+    "Here is a few more example solutions. These are only still-life and no convergent behavior.\n",
+    "\n",
+    "<img src=\"img/soln1.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"img/soln2.png\" style=\"display: inline;\"/>\n",
+    "\n"
    ]
   },
   {
@@ -489,11 +551,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusions\n",
+    "# Conclusions\n",
     "\n",
     "### What I Learned\n",
     "#### About Conway's Game of Life and applied Reinforcement Learning\n",
@@ -514,7 +575,7 @@
     "* Compressed pickling for storing model states\n",
     "* PEP 8 code style standards\n",
     "\n",
-    "### Experimentation\n",
+    "### Experimentation and Difficulties\n",
     "\n",
     "Problems with my experimentation methodologies:\n",
     "* I didn't do much hyper-parameter tuning, so it's possible there are better parameters which train the model much better than my experiments found.\n",
@@ -532,14 +593,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Word count for file Final.ipynb is 4448\n"
+      "Word count for file Final.ipynb is 4751\n"
      ]
     }
    ],
@@ -557,13 +618,6 @@
     "    if cell.cell_type == \"markdown\":\n",
     "        word_count += len(cell['source'].replace('#', '').lstrip().split(' '))\n",
     "print('Word count for file', nbfile[0], 'is', word_count)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*Note: While the word count is slightly over, I have text tables of results, so of words actually related to my work and explanation, I am within the expected range.*"
    ]
   },
   {
@@ -590,7 +644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
