--- a/Report.ipynb
+++ b/Report.ipynb
@@ -59,17 +59,17 @@
    "source": [
     "This is the initial state. You can see dots in the middle. This symbolize flipped cells.\n",
     "\n",
-    "<img src=\"img/demo1.png\" style=\"display: inline-block;\" width=\"400px\" height=\"600px\"/>\n",
+    "<img src=\"proj/img/demo1.png\" style=\"display: inline-block;\" width=\"400px\" height=\"600px\"/>\n",
     "\n",
     "Here is the state a few iterations later\n",
     "\n",
-    "<img src=\"img/demo2.png\" style=\"display: inline-block;\" width=\"200px\" height=\"300px\"/>\n",
-    "<img src=\"img/demo3.png\" style=\"display: inline-block;\" width=\"200px\" height=\"300px\"/>\n",
-    "<img src=\"img/demo4.png\" style=\"display: inline-block;\" width=\"200px\" height=\"300px\"/>\n",
+    "<img src=\"proj/img/demo2.png\" style=\"display: inline-block;\" width=\"200px\" height=\"300px\"/>\n",
+    "<img src=\"proj/img/demo3.png\" style=\"display: inline-block;\" width=\"200px\" height=\"300px\"/>\n",
+    "<img src=\"proj/img/demo4.png\" style=\"display: inline-block;\" width=\"200px\" height=\"300px\"/>\n",
     "\n",
     "And about 100 iterations later:\n",
     "\n",
-    "<img src=\"img/demo5.png\" style=\"display: inline-block;\" width=\"200px\" height=\"300px\"/>\n",
+    "<img src=\"proj/img/demo5.png\" style=\"display: inline-block;\" width=\"200px\" height=\"300px\"/>\n",
     "\n",
     "This is a state filled with still life and oscillators. The cells will stay alive forever. My RL agent would converge to these and then avoid changing cells near any of the structures."
    ]
@@ -176,29 +176,29 @@
     "\n",
     "Here is the beginning of the trial:\n",
     "\n",
-    "<img src=\"img/test_start6.png\" style=\"display: inline;\"/>\n",
-    "<img src=\"img/test_start7.png\" style=\"display: inline;\"/>\n",
-    "<img src=\"img/test_start8.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"proj/img/test_start6.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"proj/img/test_start7.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"proj/img/test_start8.png\" style=\"display: inline;\"/>\n",
     "\n",
     "These domonstrate how the agent chooses open space. It behaved like this for about 7 iterations.\n",
     "\n",
-    "<img src=\"img/open_space1.png\" style=\"display: inline;\"/>\n",
-    "<img src=\"img/open_space2.png\" style=\"display: inline;\"/>\n",
-    "<img src=\"img/open_space3.png\" style=\"display: inline;\"/>\n",
-    "<img src=\"img/open_space4.png\" style=\"display: inline;\"/>\n",
-    "<img src=\"img/open_space5.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"proj/img/open_space1.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"proj/img/open_space2.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"proj/img/open_space3.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"proj/img/open_space4.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"proj/img/open_space5.png\" style=\"display: inline;\"/>\n",
     "\n",
     "Here is a solution it converges to after the system becomes an oscillator or still life. In this case, it was an oscillator.\n",
     "\n",
-    "<img src=\"img/osc_soln1.png\" style=\"display: inline;\"/>\n",
-    "<img src=\"img/osc_soln2.png\" style=\"display: inline;\"/>\n",
-    "<img src=\"img/osc_soln3.png\" style=\"display: inline;\"/>\n",
-    "<img src=\"img/osc_soln4.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"proj/img/osc_soln1.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"proj/img/osc_soln2.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"proj/img/osc_soln3.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"proj/img/osc_soln4.png\" style=\"display: inline;\"/>\n",
     "\n",
     "Here is a few more example solutions. These are only still-life and no convergent behavior.\n",
     "\n",
-    "<img src=\"img/soln1.png\" style=\"display: inline;\"/>\n",
-    "<img src=\"img/soln2.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"proj/img/soln1.png\" style=\"display: inline;\"/>\n",
+    "<img src=\"proj/img/soln2.png\" style=\"display: inline;\"/>\n",
     "\n"
    ]
   },
@@ -585,7 +585,7 @@
     "\n",
     "### Resources\n",
     "\n",
-    "See cs440_notes.docx for the reading component for the Honors Requirement.\n",
+    "See `cs440_notes.docx` for the reading component for the Honors Requirement.\n",
     "* Sutton, Richard S., and Andrew G. Barto. Reinforcement Learning: An Introduction. Chapter 6: Temporal-Difference Learning. Second edition, complete draft. 5 Nov 2017.\n",
     "* Caballero, Lorena, Bob Hodge, and Sergio Hernandez. Conway’s “Game of Life” and the Epigenetic Principle.\n",
     "* Gadaleta, Sabino, and Gerhard Dangelmayr. Reinforcement Learning Chaos Control Using Value Sensitive Vector-Quantization."
