--- a/Report.ipynb
+++ b/Report.ipynb
@@ -575,12 +575,17 @@
     "* Compressed pickling for storing model states\n",
     "* PEP 8 code style standards\n",
     "\n",
-    "### Experimentation and Difficulties\n",
+    "### Difficulties\n",
+    "\n",
+    "Difficulties:\n",
+    "* I'm pretty sure that my conversions from numpy.ndarray/list/torch.Tensor result in my neural network training very inefficiently (either not using GPU or making unnecessary copies). It was functional, so I didn't look further into it.\n",
+    "* Training larger networks took a while, so I usually didn't let the network train for long. This means the RL agent wasn't performing as well as it could have, but I think letting it train longer has the same performance as the RL in a smaller state, i.e., it will memorize the larger state as well. However, since it can't really memorize the larger state, it would be interesting to know if it could draw accurate extrapolations from such an intense training.\n",
+    "* I struggled with implementing a neural network until I gave up and used PyTorch.\n",
+    "* It was difficult learning how to use PyGame since I had never used it before.\n",
+    "* These difficulties led to the time line being altered. The experimentation phase was compressed into a week, and the development of the model and RL agent were extended by a week.\n",
     "\n",
     "Problems with my experimentation methodologies:\n",
     "* I didn't do much hyper-parameter tuning, so it's possible there are better parameters which train the model much better than my experiments found.\n",
-    "* Training larger networks took very long, so I usually didn't let the network train for very long. This means the RL agent wasn't performing as well as it could have, but I think letting it train longer has the same performance as the RL in a smaller state, i.e., it will memorize the larger state as well. However, since it can't really memorize the larger state, it would be interesting to know if it could draw accurate extrapolations from such an intense training.\n",
-    "* I'm pretty sure that my conversions from numpy.ndarray/list/torch.Tensor result in my neural network training very inefficiently (either not using GPU or making unnecessary copies). It was functional, so I didn't look further into it.\n",
     "* I put tables in my report instead of graphing them, which I apologize for.\n",
     "\n",
     "### Resources\n",
@@ -593,14 +598,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Word count for file Final.ipynb is 4751\n"
+      "Word count for file Report.ipynb is 4802\n"
      ]
     }
    ],
@@ -608,7 +613,7 @@
     "import io\n",
     "from IPython.nbformat import current\n",
     "import glob\n",
-    "nbfile = glob.glob('Final.ipynb')\n",
+    "nbfile = glob.glob('Report.ipynb')\n",
     "if len(nbfile) > 1:\n",
     "    print('More than one ipynb file. Using the first one.  nbfile=', nbfile)\n",
     "with io.open(nbfile[0], 'r', encoding='utf-8') as f:\n",
@@ -621,11 +626,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "*Sorry for going over the word count, but I think a majority of it is from my text results, so content-wise, I am under.*"
+   ]
   }
  ],
  "metadata": {
