update report with findings

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -28,6 +28,7 @@
     "I represented the CGOL problem with my Problem class. My reinforcement agent interacts with problems that follow the specified API, so it was then able to interact with my CGOL model. I defined several aspects of what available actions could be taken from specific states, how the initial state was created, what constituted as a reward (usually maximizing cell population), and how the size of the problem affected how the RL agent performed. I used making random actions as a control.\n",
     "\n",
     "### Findings\n",
+    "* My final experiment shows that with enough training, the rl agent is capable of keeping a CGOL system moving (not filled with still life).\n",
     "* The RL agent favored not exploring the system to more passive moves: The RL agent's strategy was to create still life structures and then stop interacting with the system. If forced to be more interactive (reward incentives or limiting passive actions), it performed better.\n",
     "* If the initial state was always the same, it was very good at memorizing paths to maximize reward. However, if it was random, it performed worse. With random states, it would try to converge to a still life, and then stop interacting with the system. If it failed to converge, it performed as well as the control. This implies a lack of understanding of the system but instead a memorization of paths to still life.\n",
     "* For smaller cell grids, RL is extremely effective in maximizing the population of cells. That is because it is capable of memorizing the state space as opposed to learning it. For large state spaces, random action (control) outperformed the RL agent in population, but the RL agent was able to keep cells alive for longer (generations vs boom and bust populations).\n",
@@ -80,7 +81,7 @@
    "source": [
     "###  (Failed) Personal implementation of Neural Network\n",
     "\n",
-    "Originally, I planned to implement a Neural Network manually, but it didn't work. I did the math to derive the gradient of the weights for stochastic gradient descent, and the math is correct, but implementation doesn't work as well. \n",
+    "Originally, I planned to implement a Neural Network manually, but it didn't work. I did the math to derive the gradient of the weights for batch stochastic gradient descent, but implementation doesn't work as well. \n",
     "\n",
     "**Problems**\n",
     "* NN doesn't fit well compared to given NN code from class and compared to the pytorch NN I built.\n",
@@ -88,11 +89,7 @@
     "\n",
     "**Why?**\n",
     "\n",
-    "The math was for the weights gradient of a single point. I perform the optimization step per point for a number of iterations. Fitting subsequent points overwrites the learning of the previous point.\n",
-    "\n",
-    "**Solution**\n",
-    "\n",
-    "Batching which uses matrix multiplication, but I haven't done this since I decided to just use pytorch. \n",
+    "Probably incorrect math.\n",
     "\n",
     "###  A restricted feed forward neural network package made with PyTorch.\n",
     "\n",
@@ -117,6 +114,8 @@
     "The Reinforcement Learning Agent was designed to model the code given in lecture 21 (RL with Neural Network as Q-function). The SARSA tuple comes from the problem object used by the reinforcement agent. The RL agent runs through the problem several times (ether reaching a maximum allowed steps or reaching a goal state). It collects Q-values and rewards. Once several runs have been made, the Q function is updated in batches.\n",
     "\n",
     "$Q(s_i, a_i) \\leftarrow r + Q(s_{i+1}, a_{i+1})$\n",
+    "\n",
+    "I update Q with TD but with a discount factor of 1 and a learning rate of 1 (so it's not really TD).\n",
     "\n",
     "Here is the general process of a single batch (some lines have been removed for readability).\n",
     "```python\n",
@@ -145,9 +144,11 @@
     "    replay_samples.append(key)\n",
     "```\n",
     "\n",
+    "One difference with my code and the code provided is that my code never evaluates good actions to be taken from a goal state.\n",
+    "\n",
     "### Experiment Results\n",
     "\n",
-    "More details for experiments are in the [Experimentation](#Experimentation) section.\n",
+    "More details for experiments are in the [Experimentation](#Experimentation) section. The most notable experiment is Experiment 6 where I fix all the problems identified by experiments 1-5. **You don't have to read details for experiments 1-5, but do read experiment 6 if any.**\n",
     "\n",
     "#### Experiment 1\n",
     "* The optimal solution is to find a means of generating still life and then make no actions on the system.\n",
@@ -163,7 +164,12 @@
     "* I suspect that this factor doesn't have much of an affect on RL since the state deviates from the initial state so quickly.\n",
     "\n",
     "#### Experiment 5\n",
-    "* RL is memorizing the small state space and doesn't perform well in large state spaces."
+    "* RL is memorizing the small state space and doesn't perform well in large state spaces.\n",
+    "\n",
+    "**At this point, I decided to redesign how I was experimenting and how the problem space was designed altogether. Experiment 6 is much more telling and accurate.**\n",
+    "\n",
+    "#### Experiment 6\n",
+    "* RL is potentially capable of learning how to keep a CGOL system stimulated."
    ]
   },
   {
@@ -454,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Experiment 4\n",
+    "## Experiment 4\n",
     "\n",
     "Variable change: Variable density (the chance of a cell initially being alive)\n",
     "\n",
@@ -503,7 +509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Experiment 5\n",
+    "## Experiment 5\n",
     "\n",
     "Variable: Problem/grid size\n",
     "\n",
@@ -554,20 +560,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Experiment 6\n",
+    "\n",
+    "Variable: Redefined the problem's reward and measurement methods.\n",
+    "\n",
+    "Changes to Problem:\n",
+    "* To prevent the AI from learning repeating states (with oscillators and moves which don't alter the cell structures), I keep track of populations. If the cells have the same population multiple times close together, then I consider it to have found an oscillator. In these cases, I consider them terminal states and reward -5.\n",
+    "* To further discourage static states, if the population doesn't change from one generation to the next, then I give reward of -1.\n",
+    "* If the population changes, I reward 1. If the population is above a 50% density, then I reward 5.\n",
+    "\n",
+    "Changes to Experiment Practice\n",
+    "* The trials use the same initial state. Before they didn't, so variation was due to chance. Now, if the control did better, then it is because the rl agent can't perform well.\n",
+    "\n",
+    "##### Results\n",
+    "\n",
+    "    Title: random initial states, 10x10 grid, 500 batches of 20\n",
+    "    -~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-\n",
+    "    control\n",
+    "    control trial: 0; steps: 99; reward: 73; maxout: False\n",
+    "    control trial: 1; steps: 7; reward: 3; maxout: False\n",
+    "    control trial: 2; steps: 54; reward: 26; maxout: False\n",
+    "    control trial: 3; steps: 31; reward: 17; maxout: False\n",
+    "    control trial: 4; steps: 145; reward: 113; maxout: False\n",
+    "    control trial: 5; steps: 61; reward: 51; maxout: False\n",
+    "    control trial: 6; steps: 83; reward: 63; maxout: False\n",
+    "    control trial: 7; steps: 355; reward: 283; maxout: False\n",
+    "    control trial: 8; steps: 218; reward: 184; maxout: False\n",
+    "    control trial: 9; steps: 52; reward: 42; maxout: False\n",
+    "    total steps: 1105\n",
+    "    total rewards: 855\n",
+    "    total maxouts: 0\n",
+    "\n",
+    "    -~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-\n",
+    "    rl agent\n",
+    "    test trial: 0; steps: 25; reward: -1; maxout: False\n",
+    "    test trial: 1; steps: 22; reward: 22; maxout: False\n",
+    "    test trial: 2; steps: 72; reward: 54; maxout: False\n",
+    "    test trial: 3; steps: 266; reward: 220; maxout: False\n",
+    "    test trial: 4; steps: 240; reward: 196; maxout: False\n",
+    "    test trial: 5; steps: 112; reward: 88; maxout: False\n",
+    "    test trial: 6; steps: 196; reward: 146; maxout: False\n",
+    "    test trial: 7; steps: 53; reward: 47; maxout: False\n",
+    "    test trial: 8; steps: 112; reward: 68; maxout: False\n",
+    "    test trial: 9; steps: 145; reward: 123; maxout: False\n",
+    "    total steps: 1243\n",
+    "    total rewards: 963\n",
+    "    total maxouts: 0\n",
+    "\n",
+    "The total rewards and steps are higher, so the RL agent did perform slightly better. However, I don't know enough statistics to tell whether this is statistically significant.\n",
+    "\n",
+    "This fact in a 10x10 grid is really promising because it shows that the RL agent can perform at least as good as random. \n",
+    "\n",
+    "**Conclusion: RL is potentially capable of learning how to keep a CGOL system stimulated.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Conclusions\n",
     "\n",
     "### What I Learned\n",
     "#### About Conway's Game of Life and applied Reinforcement Learning\n",
     "* The RL agent favored not exploring the system to more passive moves: The RL agent's strategy was to create still life structures and then stop interacting with the system. If forced to be more interactive (reward incentives or limiting passive actions), it performed better.\n",
     "* If the initial state was always the same, it was very good at memorizing paths to maximize reward. However, if it was random, it performed worse. With random states, it would try to converge to a still life, and then stop interacting with the system. If it failed to converge, it performed as well as the control. This implies a lack of understanding of the system but instead a memorization of paths to still life.\n",
-    "* For smaller cell grids, RL is extremely effective in maximizing the population of cells. That is because it is capable of memorizing the state space as opposed to learning it. For large state spaces, random action (control) outperformed the RL agent in population, but the RL agent was able to keep cells alive for longer (generations vs boom and bust populations).\n",
-    "* The RL agent is capable of outperforming a random agent, but it lacks a true understanding of the system.\n",
+    "* Experiments 1-5 show that for smaller cell grids, RL is extremely effective in maximizing the population of cells. That is because it is capable of memorizing the state space as opposed to learning it. For large state spaces, random action (control) outperformed the RL agent in population, but the RL agent was able to keep cells alive for longer (generations vs boom and bust populations).\n",
+    "* However, experiment 6 shows more accurately that with enough training, the RL agent is capable of outperforming a random agent in even large grids with random initial states.\n",
     "\n",
     "#### About Programming and AI\n",
     "\n",
     "Here are some more general topics that I understand much more now:\n",
     "* Back propagation and minimization problems\n",
-    "* The general SARSA Neural Network Q-function Reinforcement Learning Algorithm\n",
+    "* The general SARSA Neural Network Q-function Reinforcement Learning Algorithm with TD.\n",
     "* Applying MVC to create GUI application where Model is independent from Controller/View\n",
     "* How to create installable python modules (my `cgolai` package can be installed like other packages, with `setup.py`).\n",
     "* Unit testing with python's `unittest` to test my module\n",
@@ -579,18 +643,19 @@
     "\n",
     "Difficulties:\n",
     "* I'm pretty sure that my conversions from numpy.ndarray/list/torch.Tensor result in my neural network training very inefficiently (either not using GPU or making unnecessary copies). It was functional, so I didn't look further into it.\n",
-    "* Training larger networks took a while, so I usually didn't let the network train for long. This means the RL agent wasn't performing as well as it could have, but I think letting it train longer has the same performance as the RL in a smaller state, i.e., it will memorize the larger state as well. However, since it can't really memorize the larger state, it would be interesting to know if it could draw accurate extrapolations from such an intense training.\n",
-    "* I struggled with implementing a neural network until I gave up and used PyTorch.\n",
+    "* Training larger networks took a while, so I usually didn't let the network train for long except for experiment 6. This means the RL agent wasn't performing as well as it could have, but I think letting it train longer has the same performance as the RL in a smaller state, i.e., it will memorize the larger state as well. However, since it can't really memorize the larger state, it would be interesting to know if it could draw accurate extrapolations from such an intense training.\n",
+    "* I struggled with implementing a neural network by deriving my own gradient until I gave up and used PyTorch.\n",
     "* It was difficult learning how to use PyGame since I had never used it before.\n",
-    "* These difficulties led to the time line being altered. The experimentation phase was compressed into a week, and the development of the model and RL agent were extended by a week.\n",
+    "* These difficulties led to the time line being altered. The experimentation phase was compressed into a week, and the development of the model and RL agent were extended.\n",
     "\n",
     "Problems with my experimentation methodologies:\n",
     "* I didn't do much hyper-parameter tuning, so it's possible there are better parameters which train the model much better than my experiments found.\n",
     "* I put tables in my report instead of graphing them, which I apologize for.\n",
+    "* Experiment 6 fixes some of my measurement issues (testing control vs rl agent with different initial state creates variability between testing, and this hinders results in experiment 1-5, but not 6).\n",
     "\n",
     "### Resources\n",
     "\n",
-    "See `cs440_notes.docx` for the reading component for the Honors Requirement.\n",
+    "**See `cs440_notes.docx` for the reading component for the Honors Requirement.**\n",
     "* Sutton, Richard S., and Andrew G. Barto. Reinforcement Learning: An Introduction. Chapter 6: Temporal-Difference Learning. Second edition, complete draft. 5 Nov 2017.\n",
     "* Caballero, Lorena, Bob Hodge, and Sergio Hernandez. Conway’s “Game of Life” and the Epigenetic Principle.\n",
     "* Gadaleta, Sabino, and Gerhard Dangelmayr. Reinforcement Learning Chaos Control Using Value Sensitive Vector-Quantization."
@@ -598,14 +663,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Word count for file Report.ipynb is 4802\n"
+      "Word count for file Report.ipynb is 5463\n"
      ]
     }
    ],
@@ -629,7 +694,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Sorry for going over the word count, but I think a majority of it is from my text results, so content-wise, I am under.*"
+    "*Sorry for going over the word count, but I think a majority of it is from my text results, and you don't need to read details for experiment 1-5*"
    ]
   }
  ],
